--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.7",
-    "tslint": "^6.1.3",
-    "typescript": "^4.1.3"
+    "nodemon": "2.0.12",
+    "tslint": "6.1.3",
+    "typescript": "4.3.5"
   },
   "dependencies": {
-    "@types/express": "^4.17.11",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.10.3",
-    "crypto": "^1.0.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.13"
+    "@types/express": "4.17.13",
+    "@types/jsonwebtoken": "8.5.4",
+    "@types/mongoose": "5.11.97",
+    "crypto": "1.0.1",
+    "dotenv": "10.0.0",
+    "express": "4.17.1",
+    "jsonwebtoken": "8.5.1",
+    "mongoose": "5.13.5"
   }
 }
